# dvm

./: .gitignore  .ocamlformat  .prettierignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  dune  dune-project  dvm.opam  dvm.opam.template  esy.json  package.json
.github/workflows/: release.yml  workflow.yml
esy.lock/: index.json
executable/: Index.ml  Index.re  Init.ml  Init.re  Install.ml  Install.re  List.re  ListAll.re  Ls.ml  Ls.re  Ls_remote.ml  Ls_remote.re  Tags.re  Uninstall.ml  Uninstall.re  Use.ml  Use.re  dune
lib/: config.ml  dune  dvm.ml  gc.ml  http.ml  init.ml  install.ml  latest.ml  ls.ml  ls_remote.ml  string_utility.ml  system.ml  uninstall.ml  use.ml
scripts/: copy-binary.sh  copy-static-binary.sh
src/: Constant.re  Dvm.re  Http.re  Ls.re  Ls_remote.re  Package_Info.re  constant.re  dune  dvm.ml  dvm.re  gc.re  helper.ml  http.re  init.ml  init.re  install.ml  install.re  latest.re  ls.ml  ls.re  ls_remote.ml  ls_remote.re  package_info.re  system.re  uninstall.ml  uninstall.re  use.ml  use.re  util.re
test/: Library.re  Test.re  TestFramework.re  dune
